# rowobots

./: .gitignore  Cargo.toml  flake.nix  rowobots.toml
client/: package-lock.json  package.json
client/src/: admin.ts  consts.ts  controller.ts  global.d.ts  header.ts  index.css  index.ts
client/www/: admin.html  index.html
dummy_client/: main.js  package-lock.json  package.json
src/: command.rs  config.rs  main.rs  state.rs  web.rs
